--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "npm-semver-example",
-  "version": "0.2.1",
+  "version": "0.0.1",
   "description": "Example project for my blog post",
   "scripts": {
-    "dev": "parcel index.html",
+    "dev": "parcel --no-hmr index.html",
     "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
